// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`context-specific-log-levels-test allows overriding the default log level for individual contexts 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [
    Array [
      "[1] [95mDEBUG very-important This should show up[39m",
      "DEBUG",
      "very-important",
    ],
  ],
  "INFO" => Array [],
  "WARN" => Array [],
  "ERROR" => Array [],
}
`;

exports[`context-specific-log-levels-test perfect match is preferred over regexp 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [
    Array [
      "[1] [95mDEBUG long-match This should show up[39m",
      "DEBUG",
      "long-match",
    ],
  ],
  "INFO" => Array [],
  "WARN" => Array [],
  "ERROR" => Array [],
}
`;

exports[`context-specific-log-levels-test regexp are supported 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [
    Array [
      "[1] INFO this-should-match This should show up",
      "INFO",
      "this-should-match",
    ],
  ],
  "WARN" => Array [],
  "ERROR" => Array [],
}
`;
